RESOLVED FIXED89424
[Mac] Editor::fontAttributesForSelectionStart() leaks a NSShadow
https://bugs.webkit.org/show_bug.cgi?id=89424
Summary [Mac] Editor::fontAttributesForSelectionStart() leaks a NSShadow
Andy Estes
Reported 2012-06-18 22:58:33 PDT
[Mac] Editor::fontAttributesForSelectionStart() leaks a NSShadow
Attachments
Patch (1.36 KB, patch)
2012-06-18 23:00 PDT, Andy Estes
mitz: review+
aestes: commit-queue-
Andy Estes
Comment 1 2012-06-18 23:00:04 PDT
mitz
Comment 2 2012-06-18 23:09:08 PDT
Comment on attachment 148252 [details] Patch Could have used a RetainPtr here.
Andy Estes
Comment 3 2012-06-18 23:33:53 PDT
Andy Estes
Comment 4 2012-06-18 23:35:22 PDT
(In reply to comment #2) > (From update of attachment 148252 [details]) > Could have used a RetainPtr here. Landed with a RetainPtr.
Note You need to log in before you can comment on or make changes to this bug.