[Mac] Editor::fontAttributesForSelectionStart() leaks a NSShadow https://bugs.webkit.org/show_bug.cgi?id=89424

Reviewed by Dan Bernstein.

* editing/mac/EditorMac.mm:
(WebCore::Editor::fontAttributesForSelectionStart): Store the NSShadow
in a RetainPtr so that it's released before going out of scope.

Canonical link: https://commits.webkit.org/107290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120680 268f45cc-cd09-0410-ab3c-d52691b4dbfc